[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false } # compression
thiserror = "1.0.38"                             # error handling
clap = { version = "4.5.21", features = ["derive"] }
sha1 = "0.10.6"
chrono = "0.4.38"
